# blooio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  lefthook.yml
.github/workflows/: ci.yml
examples/: blocking.rs  configuration.rs  error_handling.rs  messaging.rs  pagination.rs  quickstart.rs  webhooks.rs
src/: config.rs  error.rs  lib.rs  secret.rs
src/client/: asynchronous.rs  blocking.rs  mod.rs
src/core/: mod.rs  operation.rs  options.rs  pagination.rs  ratelimit.rs  raw.rs  request.rs  response.rs  retry.rs
src/resources/: account.rs  chats.rs  contact_card.rs  contacts.rs  facetime.rs  groups.rs  location.rs  mod.rs  numbers.rs  phone_numbers.rs  webhooks.rs
src/types/: mod.rs
src/webhook/: actix.rs  axum.rs  mod.rs  server.rs  signature.rs
tests/: integration_async.rs  integration_sync.rs  live_smoke.rs  redaction.rs  redaction_client.rs  webhook_actix.rs  webhook_axum.rs
