[package]
name = "blooio"
version = "0.1.0"
edition = "2024"
authors = ["Sara <sara@idknerdyshit.com>"]
description = "Typed, low-overhead Rust client for the Blooio API (iMessage/SMS automation), with sync and async surfaces."
license = "MIT OR Apache-2.0"
repository = "https://github.com/idknerdyshit/blooio"
keywords = ["blooio", "imessage", "sms", "api-client", "messaging"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
exclude = ["AGENTS.md"]

[features]
default = ["async", "rustls", "webhooks", "tracing"]
# At least one of `async` / `sync` must be enabled (compile_error! enforced in lib.rs).
async = ["dep:reqwest"]
sync = ["dep:ureq"]
# TLS backend selection. `rustls` is the default; `native-tls` is opt-in.
rustls = ["reqwest?/rustls", "ureq?/rustls"]
native-tls = ["reqwest?/native-tls", "ureq?/native-tls", "dep:native-tls"]
# Webhook signature verification + typed payloads.
webhooks = ["dep:hmac", "dep:sha2", "dep:subtle", "dep:hex"]
# Structured tracing instrumentation on the executors (secret-redacted).
tracing = ["dep:tracing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
thiserror = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
uuid = { version = "1", features = ["v4"] }

tracing = { version = "0.1", optional = true }

reqwest = { version = "0.13", default-features = false, features = ["json", "query"], optional = true }
ureq = { version = "3", default-features = false, optional = true }
native-tls = { version = "0.2", optional = true }

hmac = { version = "0.13", optional = true }
sha2 = { version = "0.11", optional = true }
subtle = { version = "2", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wiremock = "0.6"
httpmock = "0.7"

[[test]]
name = "integration_async"
required-features = ["async"]

[[test]]
name = "integration_sync"
required-features = ["sync"]

[[test]]
name = "redaction"
required-features = ["tracing", "async"]

[[test]]
name = "live_smoke"
required-features = ["async"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

unwrap_used   = "warn"
expect_used   = "warn"
panic         = "warn"
todo          = "warn"
unimplemented = "warn"
dbg_macro     = "warn"
print_stdout  = "warn"
print_stderr  = "warn"

module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"

# Triggered only by transitive deps (windows-sys, getrandom, hashbrown); not actionable.
multiple_crate_versions = "allow"
