[package]
name = "blooio"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
authors = ["Sara <sara@idknerdyshit.com>"]
description = "Typed, low-overhead Rust client for the Blooio API (iMessage/SMS automation), with sync and async surfaces."
license = "MIT OR Apache-2.0"
repository = "https://github.com/idknerdyshit/blooio"
keywords = ["blooio", "imessage", "sms", "api-client", "messaging"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
exclude = ["AGENTS.md"]

[features]
default = ["async", "rustls", "webhooks", "tracing"]
# At least one of `async` / `sync` / `webhooks` must be enabled (compile_error! enforced in lib.rs).
async = [
  "dep:reqwest",
  "dep:tokio",
  "dep:futures-core",
  "dep:async-stream",
  "dep:http",
  "dep:uuid",
  "dep:bytes",
]
sync = ["dep:ureq", "dep:http", "dep:uuid", "dep:bytes"]
# TLS backend selection. `rustls` is the default; `native-tls` is opt-in.
rustls = ["reqwest?/rustls", "ureq?/rustls"]
native-tls = ["reqwest?/native-tls", "ureq?/native-tls", "dep:native-tls"]
# Webhook signature verification + typed payloads.
webhooks = ["dep:hmac", "dep:sha2", "dep:subtle", "dep:hex"]
# Framework extractors that verify + parse inbound webhooks. Each implies `webhooks`.
axum = ["webhooks", "dep:axum", "dep:futures-util"]
actix = ["webhooks", "dep:actix-web", "dep:futures-util"]
# Structured tracing instrumentation on the executors (secret-redacted).
tracing = ["dep:tracing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = { version = "1", optional = true }
thiserror = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
uuid = { version = "1", features = ["v4"], optional = true }
bytes = { version = "1", optional = true }

tracing = { version = "0.1", optional = true }

reqwest = { version = "0.13", default-features = false, features = ["json", "query"], optional = true }
tokio = { version = "1", features = ["time"], optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
ureq = { version = "3", default-features = false, optional = true }
native-tls = { version = "0.2", optional = true }

hmac = { version = "0.13", optional = true }
sha2 = { version = "0.11", optional = true }
subtle = { version = "2", optional = true }
hex = { version = "0.4", optional = true }

axum = { version = "0.8", default-features = false, optional = true }
actix-web = { version = "4", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
wiremock = "0.6"
httpmock = "0.8"
tower = { version = "0.5", features = ["util"] }
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
actix-web = "4"
actix-rt = "2"

[[test]]
name = "integration_async"
required-features = ["async"]

[[test]]
name = "webhook_axum"
required-features = ["axum"]

[[test]]
name = "webhook_actix"
required-features = ["actix"]

[[test]]
name = "integration_sync"
required-features = ["sync"]

[[test]]
name = "redaction"
required-features = ["tracing"]

[[test]]
name = "redaction_client"
required-features = ["tracing"]

[[test]]
name = "live_smoke"
required-features = ["async"]

[[example]]
name = "quickstart"
required-features = ["async"]

[[example]]
name = "messaging"
required-features = ["async"]

[[example]]
name = "pagination"
required-features = ["async"]

[[example]]
name = "error_handling"
required-features = ["async"]

[[example]]
name = "configuration"
required-features = ["async", "tracing"]

[[example]]
name = "blocking"
required-features = ["sync"]

[[example]]
name = "webhooks"
required-features = ["webhooks"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
unnameable_types = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

unwrap_used   = "warn"
expect_used   = "warn"
panic         = "warn"
todo          = "warn"
unimplemented = "warn"
dbg_macro     = "warn"
print_stdout  = "warn"
print_stderr  = "warn"

# Hand-picked restriction lints that catch high-signal library mistakes without
# enabling the noisy full restriction group.
empty_drop               = "warn"
exit                     = "warn"
as_conversions           = "warn"
fallible_impl_from       = "warn"
let_underscore_must_use  = "warn"
mem_forget               = "warn"
mutex_atomic             = "warn"
mutex_integer            = "warn"
panic_in_result_fn       = "warn"
rc_buffer                = "warn"
rc_mutex                 = "warn"
string_slice             = "warn"
try_err                  = "warn"
unused_result_ok         = "warn"
unwrap_in_result         = "warn"

module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"

# Triggered only by transitive deps (windows-sys, getrandom, hashbrown); not actionable.
multiple_crate_versions = "allow"
